# SideProject-LegalStatuteAnalysis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  legal_analysis.db  pyproject.toml  requirements.txt
docs/: README.md
docs/architecture/: system_architecture_document.md
docs/design/: system_design_document.md
docs/dev/: development_progress_report.md
docs/dev/adr/: README.md
docs/launch/: mvp_launch_checklist.md
docs/planning/: mvp_tech_spec.md  project_brief_prd_summary.md
docs/security/: mvp_security_checklist.md
scripts/: init-db.sql
src/main/python/: __init__.py  main.py
src/main/python/api/: __init__.py  analysis.py  auth.py  documents.py
src/main/python/core/: __init__.py  config.py  database.py  database_init.py  logging.py
src/main/python/models/: __init__.py  document.py  legal_article.py  question_analysis.py  user.py
src/main/python/services/: __init__.py  analysis_service.py  auth_service.py  document_service.py  llm_service.py
src/main/python/utils/: __init__.py  file_storage.py  ocr.py
src/main/resources/config/: config.yaml
開發遵循文件/: 00_project_brief_prd_summary_template.md  02_system_architecture_document_template.md  03_system_design_document_template.md  05_security_privacy_review_checklist_template.md  06_production_readiness_review_template.md  07_project_structure_template.md  09_class_relationships_template.md  產品開發流程使用說明書.md
